# YAGE

./: CMakeLists.txt  LICENSE  README.md
include/platform/: detection.hpp
src/: main.cpp
src/platform/: detection.cpp
